Thu May  7 10:39:32 CEST 2009 Guido Günther <agx@sigxcpu.org>

	Switch from Libglade to GtkBuilder
	* src/krb5-auth-dialog.xml: new file
	* preferences/krb5-auth-dialog-preferences.xml: likewise
	* src/krb5-auth-dialog.glade: remove
	* preferences/krb5-auth-dialog-preferences.glade: likewise
	* src/krb5-auth-{applet,pwdialog}.[ch]: use GtkBuilder instead of
	  glade
	* configure.ac: drop libglade check
	* po/POTFILES.in: look for krb5-auth-dialog{,-preferences}.xml instead
	  of .glade
	* {src,preferences,etpo}/Makefile.am: drop libglade

Sun May  3 17:33:22 CEST 2009 Guido Günther <agx@sigxcpu.org>

	fix build with GLib < 2.18
	* configure.ac: check for gio
	* src/Makefile.am: add GIO to LDADD
	* src/krb5-auth-dialog.c: add missing gio.h include

Sun May  3 17:31:36 CEST 2009 Guido Günther <agx@sigxcpu.org>

	* src/krb5-auth-dialog-preferences.c (ka_preferences_dialog_response):
	  Fix compilation with GTK+ < 2.14.

Sun May  3 16:43:22 CEST 2009 Guido Günther <agx@sigxcpu.org>

	* Makefile.am: ship MAINTAINERS

Sun May  3 16:42:16 CEST 2009 Guido Günther <agx@sigxcpu.org>

	* .gitignore: ignore more generated files 

Sun May  3 16:38:42 CEST 2009 Guido Günther <agx@sigxcpu.org>

	Remove cvs ignore files
	* .cvsignore: remove 
	* etpo/.cvsignore: likewise
	* po/.cvsignore: likewise
	* src/.cvsignore: likewise

Sun May  3 16:36:31 CEST 2009 Guido Günther <agx@sigxcpu.org>

	* configure.ac: add sv to ALL_LINGUAS 

Thu Apr 30 18:07:32 CEST 2009 Guido Günther <agx@sigxcpu.org>

	* configure.ac: release 0.9.1 

Thu Apr 30 18:03:10 CEST 2009 Guido Günther <agx@sigxcpu.org>

	* src/Makefile.am: add krb5-auth-applet-dbus.xml to EXTRA_DIST
	(BZ: #580789)

Fri Apr 24 10:48:30 CEST 2009 Guido Günther <agx@sigxcpu.org>

	* src/krb5-auth-pwdialog.c: query current invisiable char from
	GtkEntry and set it for GtkSecureEntry too. Patch by Matthias Clasen.
	(BZ: #538339)

Fri Apr 24 10:46:20 CEST 2009 Guido Günther <agx@sigxcpu.org>
