@@ -39,7 +39,7 @@ ka_gconf_get_string (GConfClient* client,
 			*value = g_strdup (gconf_value_get_string (gc_value));
 			success = TRUE;
 		} else if (error) {
-				g_print (error->message);
+				g_print ("%s", error->message);
 				g_error_free (error);
 		}
 		gconf_value_free (gc_value);
@@ -66,7 +66,7 @@ ka_gconf_get_int (GConfClient* client,
 			*value = gconf_value_get_int (gc_value);
 			success = TRUE;
 		} else if (error) {
-				g_print (error->message);
+				g_print ("%s", error->message);
 				g_error_free (error);
 		}
 		gconf_value_free (gc_value);
@@ -92,7 +92,7 @@ ka_gconf_get_bool (GConfClient* client,
 			*value = gconf_value_get_bool (gc_value);
 			success = TRUE;
 		} else if (error) {
-				g_print (error->message);
+				g_print ("%s", error->message);
 				g_error_free (error);
 		}
 		gconf_value_free (gc_value);
